# A.ITest

./: .env.example  .gitignore  README.md  compose.yml  config.py  main.py  pyproject.toml
dependencies/: graph.py
llm/: main_graph.py  prompts.py  tools.py
