[project]
name = "langgraph-marcos-vinicius"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.117.1",
    "langchain-google-genai>=2.1.12",
    "langgraph>=0.6.7",
    "langgraph-checkpoint-postgres>=2.0.23",
    "psycopg[binary,pool]>=3.2.10",
]
